--- a/todo.txt
+++ b/todo.txt
@@ -6,6 +6,7 @@ enemy can heal randomly ( amount based on level ( ? ) low chance every turn, tak
 
 sleep effect ( 2 - 3 turns ) have an item for it too
 
+options and maybe a load save from file reader ( ? )
 
 ======ISSUES======
 issue with poison damage even when checking inventory or scanning enemy     ==> quick fix implemented for now ( undo the damage )
