--- a/todo.txt
+++ b/todo.txt
@@ -10,6 +10,8 @@ options and maybe a load save from file reader ( ? )
 
 allow for multiple battle status
 
+bank upgrade needs to scale exponentially
+
 ======ISSUES======
 issue with poison damage even when checking inventory or scanning enemy     ==> quick fix implemented for now ( undo the damage )
 
