--- a/todo.txt
+++ b/todo.txt
@@ -15,7 +15,10 @@ issue with poison damage even when checking inventory or scanning enemy     ==> 
 
 better stat development ( seems to be okay ish for now ) game needs some balancing, end game is unplayable for both sides haha => a little better now
 
-enemy with over 100 defense will default to taking only 5 damage, end game issue ^^ => bomb, poison, confuse, summon only ways of playing end game ( spell to reduce enemy damage = > short term fix )
+enemy with over 100 defense will default to taking only 5 damage, end game issue ^^ => bomb, poison, confuse, summon only ways of playing end game ( spell to reduce enemy damage = > short term fix and damage formula rework)
 
 =====EXPLOITS=======
 check enemy can undo sleep
+
+=======WORK IN PROGRESS=======
+NEW DAMAGE FORMULA NEEDS TESTING, SEEMS OKAY FOR NOW
